fix: Add z-index no span das habilidades

--- a/src/components/Habilidades/HabilidadesStyle.css
+++ b/src/components/Habilidades/HabilidadesStyle.css
@@ -29,7 +29,7 @@
     border-radius: 5px;
     white-space: nowrap;
     transition: opacity 0.3s ease;
-    z-index: 4;
+    z-index: 4 !important;
 }
 
 .habilidades__tech:hover span {
